realized the navbar

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app>
 <head>
   <meta charset="UTF-8">
   <title>Angular Data</title>
   <link rel="stylesheet" href="css/style.css">
+
+  <script src="js/lib/angular/angular.min.js"></script>
+  <script src="js/lib/angular-route/angular-route.min.js"></script>
+  <script src="js/lib/angular-animate/angular-animate.min.js"></script>
+
 </head>
 <body>
+<header>
+  <nav class="cf" ng-include="'views/nav.html'"></nav>
+</header>
 <div class="page">
   <main class="cf">
+
   </main>
 </div>
 </body>
