--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="app">
 <head>
   <meta charset="UTF-8">
   <title>Angular Data</title>
@@ -9,6 +9,7 @@
   <script src="js/lib/angular-route/angular-route.min.js"></script>
   <script src="js/lib/angular-animate/angular-animate.min.js"></script>
 
+  <script src="js/app.js"></script>
 </head>
 <body>
 <header>
@@ -16,7 +17,7 @@
 </header>
 <div class="page">
   <main class="cf">
-
+    <ng-view></ng-view>
   </main>
 </div>
 </body>
