realized the register form. added the registerctrl and service location

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="app">
 <head>
   <meta charset="UTF-8">
-  <title>Angular Data</title>
+  <title>DataDrivenApp</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
 
   <link rel="stylesheet" href="css/style.css">
@@ -12,6 +12,7 @@
   <script src="js/lib/angular-animate/angular-animate.min.js"></script>
 
   <script src="js/app.js"></script>
+  <script src="js/controllers/registrationctrl.js"></script>
 </head>
 <body>
 <header>
