--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -11,8 +11,12 @@
   <script src="js/lib/angular-route/angular-route.min.js"></script>
   <script src="js/lib/angular-animate/angular-animate.min.js"></script>
 
+  <script src="js/lib/firebase/firebase.js"></script>
+  <script src="js/lib/angularfire/dist/angularfire.js"></script>
+
   <script src="js/app.js"></script>
-  <script src="js/controllers/registrationctrl.js"></script>
+  <script src="js/controllers/registration.js"></script>
+  <script src="js/controllers/meeting.js"></script>
 </head>
 <body>
 <header>
