--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -1,13 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
+
   <meta charset="UTF-8">
   <title>Angular Data</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
+
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700,900' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
+
+  <script src="js/lib/angular/angular.min.js"></script>
+  <script src="js/lib/angular-route/angular-route.min.js"></script>
+  <script src="js/lib/angular-animate/angular-animate.min.js"></script>
+
+  <script src="js/lib/firebase/firebase.js"></script>
+  <script src="js/lib/angularfire/dist/angularfire.js"></script>
+
+  <script src="js/app.js"></script>
+  <script src="js/controllers/registration.js"></script>
+  <script src="js/controllers/meeting.js"></script>
+
 </head>
 <body>
-<div class="page">
+<header></header>
+<div class="page" ng-controller="appCtrl">
   <main class="cf">
+      {{ message }}
   </main>
 </div>
 </body>
