--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -19,13 +19,14 @@
   <script src="js/app.js"></script>
   <script src="js/controllers/registration.js"></script>
   <script src="js/controllers/meeting.js"></script>
+  <script src="js/controllers/success.js"></script>
 
 </head>
 <body>
 <header></header>
-<div class="page" ng-controller="appCtrl">
+<div class="page">
   <main class="cf">
-      {{ message }}
+      <ng-view></ng-view>
   </main>
 </div>
 </body>
