--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -23,7 +23,9 @@
 
 </head>
 <body>
-<header></header>
+<header>
+  <nav class="cf" ng-include="'views/nav.html'"></nav>
+</header>
 <div class="page">
   <main class="cf">
       <ng-view></ng-view>
