--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -23,18 +23,26 @@
 
 </head>
 <body>
-<header>
-  <nav class="cf" ng-include="'views/nav.html'"></nav>
-</header>
-<div class="page">
-  <div class="userinfo" ng-show="currentUser">
-    <span class="userinfo">
-      Hi, {{ currentUser.firstname }}
-    </span>
+  <header>
+    <nav class="cf" ng-include="'views/nav.html'"></nav>
+  </header>
+
+  <div class="page">
+
+    <div class="userinfo" ng-show="currentUser" ng-controller="RegistrationCtrl">
+      <span class="userinfo">
+        Hi, {{ currentUser.firstname }}
+      </span>
+
+      <a ng-href="#/login" ng-click="logout()">
+        logout
+      </a>
+    </div>
+
+    <main class="cf">
+        <ng-view></ng-view>
+    </main>
   </div>
-  <main class="cf">
-      <ng-view></ng-view>
-  </main>
-</div>
+
 </body>
 </html>
